Added debug.java run by $ant dbg